# hefesto

./: .gitignore  Cargo.toml  README.md  build.gradle  settings.gradle
.github/workflows/: ci.yml  pages.yml  release.yml
core/: build.gradle
desktop/: build.gradle
desktop-api/: build.gradle
docs/: index.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hefesto-cli/: Cargo.toml
hefesto-cli/src/: main.rs
hefesto-core/: Cargo.toml
hefesto-core/src/: context.rs  help.rs  lib.rs  menu.rs
hefesto-core/src/command/: mod.rs
hefesto-core/src/feature/: base64_cmd.rs  echo.rs  json_cmd.rs  mod.rs
hefesto-core/src/feature/portinfo/: command.rs  mod.rs
hefesto-core/src/feature/portinfo/output/: csv_formatter.rs  json_formatter.rs  mod.rs  table_formatter.rs
hefesto-core/src/feature/portinfo/service/: docker_service.rs  health_check_service.rs  mod.rs  port_info_service.rs  process_enrichment_service.rs  security_analysis_service.rs  service_registry.rs
hefesto-core/src/feature/procwatch/: command.rs
hefesto-core/src/feature/procwatch/service/: alert_engine.rs  alert_parser.rs  mod.rs  process_monitor_service.rs
hefesto-core/src/port/: console.rs  mod.rs
hefesto-desktop/: Cargo.toml
hefesto-desktop/i18n/: en.json  es.json
hefesto-desktop/src/: i18n.rs  main.rs  services.rs
hefesto-desktop/src/viewmodel/: dashboard_vm.rs  mod.rs  network_explorer_vm.rs  port_detail_vm.rs  preferences_vm.rs  process_explorer_vm.rs  process_monitor_vm.rs  tools_vm.rs
hefesto-desktop/ui/: app.slint  content_area.slint  side_panel.slint  status_bar.slint  theme.slint
hefesto-desktop/ui/components/: kpi_card.slint  line_graph.slint  search_field.slint  status_badge.slint
hefesto-desktop/ui/views/: dashboard.slint  network_explorer.slint  preferences.slint  process_explorer.slint  process_monitor.slint  tools.slint
hefesto-domain/: Cargo.toml
hefesto-domain/src/: command.rs  command_parser.rs  config.rs  (+1 more)
hefesto-platform/: Cargo.toml
(+188 files in other folders)
