[workspace]
resolver = "2"
members = [
    "hefesto-domain",
    "hefesto-platform",
    "hefesto-core",
    "hefesto-cli",
    "hefesto-desktop",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
base64 = "0.22"
native-tls = "0.2"
reqwest = { version = "0.12", features = ["native-tls", "blocking"] }
slint = "1.9"

[profile.release]
opt-level = 3
lto = true
strip = true
