[package]
name = "hefesto-core"
version = "0.1.0"
edition = "2021"

[dependencies]
hefesto-domain = { path = "../hefesto-domain" }
hefesto-platform = { path = "../hefesto-platform" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
crossterm = { workspace = true }
base64 = { workspace = true }
native-tls = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
