[package]
name = "hefesto-desktop"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
hefesto-core = { path = "../hefesto-core" }
hefesto-domain = { path = "../hefesto-domain" }
hefesto-platform = { path = "../hefesto-platform" }
slint = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

[build-dependencies]
slint-build = "1.9"
